kubernetes/apigw/ingress-order.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-order
  annotations:
    #Strip /account when passing to service
    configuration.konghq.com: custom-strippath
    # Not Strip Path for Guest auth
    konghq.com/plugins: cluster-keyauth
    # Cors
    konghq.com/plugins: cors-plugin
spec:
  rules:
  - http:
      paths:
      - path: /user
        backend:
          serviceName: order-service
          servicePort: 1337
